[package]
name = "ewm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
ewm-core = { path = "../ewm-core" }
fontdue = "0.9.3"
sdl3 = { version = "0.18.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3.3.0"

[features]
# Dev/CI builds link the Homebrew/system SDL3 via pkg-config (fast).
default = ["sdl-pkgconfig"]
sdl-pkgconfig = ["sdl3/use-pkg-config"]
# App-bundle builds compile SDL3 from source and link it statically, so
# EWM.app is self-contained (see scripts/make-app.sh). Needs CMake.
sdl-static = ["sdl3/build-from-source-static"]
# Headless-server builds (the telnet Apple 1, scripts/systemd/): static
# SDL compiled as a Unix console build — no X11/Wayland, so no X dev
# packages on the box. Only --tty runs on such a binary; the SDL
# frontends need a real video build. Needs CMake.
sdl-static-headless = ["sdl-static", "sdl3/build-from-source-unix-console"]

[dev-dependencies]
# Only the icon-generator example (examples/icon.rs) uses this, for the
# zlib stream inside its hand-rolled PNG writer.
flate2 = "1"
# Test-only: derives the committed schema/ewm-config.schema.json from the
# config structs (the derive is gated with cfg_attr(test, ...) so schemars
# stays out of release builds). Consequence: no #[schemars(...)] attributes
# on the config types — promote to a plain dependency if one is ever needed.
schemars = "1"
